fixing col map grid

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -279,19 +279,32 @@
                                 <Grid ColumnSpacing="16" Padding="8,4,0,8">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="300"/>
                                     </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Text="Define color replacements" HorizontalAlignment="Center"/>
+                                    <TextBlock Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="1" Text="Color picker"/>
 
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="On"        HorizontalAlignment="Left" Opacity="0.7"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="1" Text="From"      HorizontalAlignment="Left" Opacity="0.7"/>
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="→"         HorizontalAlignment="Left" Opacity="0.7"/>
+                                    <TextBlock Grid.Column="3" Grid.Row="1" Text="To"        HorizontalAlignment="Left" Opacity="0.7"/>
+                                    <TextBlock Grid.Column="4" Grid.Row="1" Text="Tolerance" HorizontalAlignment="Left" Opacity="0.7"/>
+
+                                    <ScrollViewer Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="5" x:Name="ColorMapListScroll" VerticalScrollBarVisibility="Auto" Height="Auto" MaxHeight="460">
+                                        <StackPanel x:Name="ColorMapListPanel" Spacing="6"/>
+                                    </ScrollViewer>
                                     <!-- Left: mapping list -->
-                                    <StackPanel Grid.Column="0" Spacing="8">
-                                        <Grid ColumnSpacing="8">
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*"/>
-                                                <ColumnDefinition Width="Auto"/>
-                                            </Grid.ColumnDefinitions>
-                                            <TextBlock Grid.Column="0" Text="Define color replacements"/>
-                                            <Button Grid.Column="1" x:Name="ColorMapAddButton" Content="Add" Click="ColorMapAddButton_Click"/>
-                                        </Grid>
+                                    <!--<StackPanel Grid.Column="0" Spacing="8">
+                                        <TextBlock Grid.Column="0" Text="Define color replacements" HorizontalAlignment="Center"/>
 
                                         <Grid ColumnSpacing="8" Margin="0,4,0,0">
                                             <Grid.ColumnDefinitions>
@@ -313,15 +326,15 @@
                                         <ScrollViewer x:Name="ColorMapListScroll" VerticalScrollBarVisibility="Auto" Height="Auto" MaxHeight="460">
                                             <StackPanel x:Name="ColorMapListPanel" Spacing="6"/>
                                         </ScrollViewer>
-                                    </StackPanel>
+                                    </StackPanel> -->
 
                                     <!-- Right: shared color picker for swatches -->
-                                    <StackPanel Grid.Column="1" Spacing="8">
-                                        <TextBlock Text="Color picker"/>
+                                    <StackPanel Grid.Column="5" Grid.Row="2" Spacing="8">
                                         <ColorPicker x:Name="ColorMapPicker" ColorSpectrumShape="Ring" IsAlphaEnabled="False" ColorChanged="ColorMapPicker_ColorChanged"/>
                                         <StackPanel Orientation="Horizontal" Spacing="8">
-                                            <ToggleButton x:Name="PreviewColorMapToggle" Content="Preview" Checked="PreviewColorMapToggle_Checked" Unchecked="PreviewColorMapToggle_Unchecked"/>
+                                            <Button x:Name="ColorMapAddButton" Content="Add" Click="ColorMapAddButton_Click"/>
                                             <Button x:Name="ColorMapSampleButton" Content="Sample" Click="ColorMapSampleButton_Click"/>
+                                            <ToggleButton x:Name="PreviewColorMapToggle" Content="Preview" Checked="PreviewColorMapToggle_Checked" Unchecked="PreviewColorMapToggle_Unchecked"/>
                                         </StackPanel>
                                     </StackPanel>
                                 </Grid>
