--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -286,7 +286,7 @@
                                         <RowDefinition Height="Auto"/>
                                     </Grid.RowDefinitions>
                                     <TextBlock Grid.Column="0" Grid.Row="0" Text="Define color replacements" HorizontalAlignment="Center"/>
-                                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Color picker"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Color picker" HorizontalAlignment="Center"/>
 
                                     <!-- Header moved into the first row inside the scroll list for alignment -->
 
@@ -320,7 +320,7 @@
                                     </StackPanel> -->
 
                                     <!-- Right: shared color picker for swatches -->
-                                    <StackPanel Grid.Column="1" Grid.Row="1" Spacing="8">
+                                    <StackPanel Grid.Column="1" Grid.Row="1" Padding="0,32,0,0" Spacing="8">
                                         <ColorPicker x:Name="ColorMapPicker" ColorSpectrumShape="Ring" IsAlphaEnabled="False" ColorChanged="ColorMapPicker_ColorChanged"/>
                                         <StackPanel Orientation="Horizontal" Spacing="8">
                                             <Button x:Name="ColorMapAddButton" Content="Add" Click="ColorMapAddButton_Click"/>
