--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -288,7 +288,17 @@
                                         <RowDefinition Height="Auto"/>
                                     </Grid.RowDefinitions>
                                     <TextBlock Grid.Column="0" Grid.Row="0" Text="Define color replacements" HorizontalAlignment="Center"/>
-                                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Color picker" HorizontalAlignment="Center"/>
+                                    <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" Spacing="8">
+                                        <Button x:Name="ColorMapAddButton" Content="Add" Click="ColorMapAddButton_Click"/>
+                                        <Button x:Name="ColorMapSampleButton" Content="Sample" Click="ColorMapSampleButton_Click"/>
+                                        <ToggleButton x:Name="PreviewColorMapToggle" Content="Preview" Checked="PreviewColorMapToggle_Checked" Unchecked="PreviewColorMapToggle_Unchecked"/>
+                                    </StackPanel>
+                                    <StackPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Padding="0,32,0,0" Spacing="8">
+                                        <TextBlock Grid.Column="1" Grid.Row="1" Text="Color picker" HorizontalAlignment="Center"/>
+                                        <ColorPicker x:Name="ColorMapPicker" ColorSpectrumShape="Ring" IsAlphaEnabled="False" ColorChanged="ColorMapPicker_ColorChanged"/>
+                                        <ToggleSwitch x:Name="ColorMapPreserveToggle" Header="Preserve brightness" IsOn="True" Toggled="ColorMapPreserveToggle_Toggled"/>
+                                    </StackPanel>
+                                    
 
                                     <!-- Header moved into the first row inside the scroll list for alignment -->
 
@@ -322,7 +332,7 @@
                                     </StackPanel> -->
 
                                     <!-- Right: shared color picker for swatches -->
-                                    <StackPanel Grid.Column="1" Grid.Row="1" Padding="0,32,0,0" Spacing="8">
+                                    <!--<StackPanel Grid.Column="1" Grid.Row="2" Padding="0,32,0,0" Spacing="8">
                                         <ColorPicker x:Name="ColorMapPicker" ColorSpectrumShape="Ring" IsAlphaEnabled="False" ColorChanged="ColorMapPicker_ColorChanged"/>
                                         <StackPanel Orientation="Horizontal" Spacing="8">
                                             <Button x:Name="ColorMapAddButton" Content="Add" Click="ColorMapAddButton_Click"/>
@@ -330,7 +340,7 @@
                                             <ToggleButton x:Name="PreviewColorMapToggle" Content="Preview" Checked="PreviewColorMapToggle_Checked" Unchecked="PreviewColorMapToggle_Unchecked"/>
                                         </StackPanel>
                                         <ToggleSwitch x:Name="ColorMapPreserveToggle" Header="Preserve brightness" IsOn="True" Toggled="ColorMapPreserveToggle_Toggled"/>
-                                    </StackPanel>
+                                    </StackPanel>-->
                                 </Grid>
                             </Expander>
                         </Border>
